<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/rl_back_container"
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/back_arrow_icon"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_send_container"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="@string/send_button_text"
                android:textSize="25sp"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv_seller_key_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/seller_key_text"/>

                <EditText
                    android:id="@+id/et_seller_key"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_seller_key_text"
                    android:layout_marginTop="20dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/et_module_key"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_module_key_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_seller_key"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/module_key_text"/>

                <EditText
                    android:id="@+id/et_module_key"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_module_key_text"
                    android:layout_marginTop="20dp"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:nextFocusForward="@+id/spn_what_promotor_doing"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_what_promotor_doing_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/et_module_key"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/what_promotor_did_text"/>

                <Spinner
                    android:id="@+id/spn_what_promotor_doing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_what_promotor_doing_text"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_order_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_what_promotor_doing"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/order_text"/>

                <Spinner
                    android:id="@+id/spn_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_order_text"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>


                <TextView
                    android:id="@+id/tv_arts_expose_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_order"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/arts_expose_text"/>

                <Spinner
                    android:id="@+id/spn_arts_exposed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_arts_expose_text"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_arts_exposed"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/offers_clearly_text"/>

                <Spinner
                    android:id="@+id/spn_offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_offers"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_sell_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_offers"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/sell_register_and_particitaption_text"/>

                <Spinner
                    android:id="@+id/spn_sell_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_sell_register"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_know_current_promotions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_sell_register"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/know_current_promotions_text"/>

                <Spinner
                    android:id="@+id/spn_know_current_promotions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_know_current_promotions"
                    android:layout_marginTop="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_uniforme_code_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/spn_know_current_promotions"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/uniform_code_text"/>

                <Spinner
                    android:id="@+id/spn_uniforme_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tv_uniforme_code_text"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>



</RelativeLayout>