<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/rl_back_container"
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:src="@drawable/back_arrow_icon"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_send_container"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
                <TextView
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:text="@string/send_button_text"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_module_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/module_key_text"/>

        <EditText
            android:id="@+id/et_module_key"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_module_key_text"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_observations_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_module_key"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/observations_text"/>

        <EditText
            android:id="@+id/et_observations"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_observations_text"
            android:layout_marginTop="20dp"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>